scss/style.scss
//Colors
$color-base:rgb(0, 170, 160);
$color-accent: rgb(255, 122, 90);
$color-complementary-1: rgb(255, 184, 95);
$color-complementary-2: rgb(70, 32, 102); 
$color-complementary-3: rgb(142, 210, 201);
$color-complementary-4: rgb(252, 244, 217);

$color-grey-1: #eee;
$color-grey-2: #ccc;
$color-grey-3: #aaa;
$color-grey-4: #888;
$color-grey-5: #666;
$color-grey-6: #444;
$color-grey-7: #222;

//Transition
$transition: all 0.25s ease-in-out;

//Radius
$radius: 4px;

//Box Shadow
$shadow-contour: 0 0 7px 1px rgba(0,0,0,0.2);
$shadow-inner: inset 0px 0px 2px 3px rgba(0,0,0,0.2);

//General
body {
	font-family: 'Open Sans', sans-serif;
	color: $color-grey-6;
	font-size: 16px;
	overflow-x: hidden;
}
h1, h2, h3, h4, h5, h6 {
	font-family: 'Proza Libre', sans-serif;
	color: $color-grey-7;
}

a {
	color: $color-base;
	text-decoration: none;
	transition: $transition;
	&:hover {
		color: lighten($color-base, 15%);
		text-decoration: none;
	}
}
input[type=text], input[type=email], textarea {
	transition: $transition;
	outline: none;
	border: 1px solid $color-complementary-2;
	box-shadow: none;
  }
   
  input[type=text]:focus, input[type=email]:focus, textarea:focus {
	box-shadow: inset 0 0 5px $color-complementary-3;
	border: 1px solid $color-complementary-3;
  }

.hidden {
	display: none!important;
}
.header-simple {
	text-transform: uppercase;
	font-weight: bold;
	margin-bottom: 1em;
	&--light {
		color: #fff;
	}
}
.paragraph-simple {
	color: $color-grey-6;
	&--light {
		color: #fff;
	}
}
.btn-simple {
	color: #fff;
	background-color: $color-complementary-2;
	text-transform: uppercase;
	font-weight: bold;
	letter-spacing: 0.1rem;
	border: none;
	box-shadow: none;
	display: inline-block;
	font-size: 0.85rem;
	&:hover {
		background-color: lighten($color-complementary-2, 30%);
		color: #fff;
	}
	&--lg {
		font-size: 1rem;
		padding: 10px 18px;
	}
}

.divider-simple {
	background-image: linear-gradient(to right,transparent,$color-grey-1,transparent);
	background-image: -webkit-linear-gradient(left,transparent,$color-grey-1,transparent);
    border: 0;
	height: 1px;
	margin: 3rem 0;
}

.add-bg {
	background-color: rgba(0,0,0,0.85);
}

//Language 
html:lang(pl) {
	:lang(en) {
		display: none!important;
	}
	.nav-link__pl {
		display: none!important;
		& {
			img {
				display: none!important;
			}
		}
	}
	.nav-link__en {
		display: block!important;
		& {
			img {
				display: inline-block!important;
			}
		}
	}
}
html:lang(en) {
	:lang(pl) {
		display: none!important;
	}
	.nav-link__pl {
		display: block!important;
		& {
			img {
				display: inline-block!important;
			}
		}
	}
	.nav-link__en {
		display: none!important;
		& {
			img {
				display: none!important;
			}
		}
	}
}
//Top anchor for #home
.top-anchor {
	width: 0;
	height: 0;
	font-size: 0;
	overflow: hidden;
	margin: 0;
	padding: 0;
}

//Logo
.logo-1 {
	color: $color-base;
	font-size: 1rem;
}
.logo-2 {
	color: $color-base;
	font-size: 1rem;
}
.logo-dot {
	color: $color-accent;
	font-size: 2rem;
	line-height: 0.9rem;
    display: inline-block;
}
.logo-3 {
	color: $color-base;
	font-size: 1rem;
}

//Navbar
.navbar {
	font-weight: bold;
	.logo-container {
		display: flex;
	}
	.navbar-toggler {
		.fas {
			color: #fff;
			font-size: 2rem;
		}
	}
	.nav-item {
		margin-right: 2rem;
		&:last-child {
			margin-right: 0;
		}
		&__language {
			display: inline-block;
			width:50px;
			.flag {
				width: 100%;
				height: 20px;
			}
		}
	}
}

.logo-container {
	margin:0;
	margin-bottom: 0;
	font-weight: bold;
	font-family: 'Proza Libre', sans-serif;
}

//Slider
.container-slider {
	padding: 0;
}
.section-slider {
	&__container {
		width: 100%;
		display: flex;
		align-items: center;
		justify-content: center;
		flex-direction: column;
		height: 100vh;
		background: #fff url(../img/slider-bg.jpg) center center no-repeat;
		background-attachment: fixed;
		background-size: cover;
		position: relative;
		z-index: 1;
		&:after {
			content: '';
			position: absolute;
			top: 0;
			bottom: 0;
			left: 0;
			right: 0;
			background-color: rgba(0,0,0 ,0.8);
			z-index: 0;
		}
	}
	&__logo-container {
		white-space: nowrap;
		position: relative;
		margin-bottom: 3rem;
		z-index: 1;
		text-align: center;
		&:after {
			content: '';
			display: inline-block;
			width: 50%;
			height: 1px;
			background-color: $color-complementary-3;
			position: relative;
			top: 1rem;
		}
		.logo-1 {
			font-size: 2rem;
		}
		.logo-2 {
			font-size: 2rem;
		}
		.logo-dot {
			font-size: 4rem;
		}
		.logo-3 {
			font-size: 2rem;
		}
	}
	.motto {
		color: #fff;
		font-weight: bold;
		position: relative;
		z-index: 1;
		font-size: 4rem;
		max-width: 30rem;
		text-align: center;
		@media screen and (max-width: 500px) {
			font-size: 2rem;
		}
	}
}

.about-lead {
	background-color: $color-grey-1;
	.row-lead {
		.img-info {
			max-width: 100%;
			height: 100%; 
		}
		.col-img {
			@media screen and (max-width: 767px) {
				padding-bottom: 2rem;
			}
		}
		.img-container {
			height: 100%;
			background: url(../img/img-regular-keyboard.jpg) center center no-repeat;
			background-size: contain;
			@media screen and (max-width: 767px) {
				height: 250px;
				background-size: cover;
			}
		}
		.col-text {
			padding-top: 7rem;
			padding-bottom: 7rem;
			padding-right: 5rem;
			@media screen and (max-width: 767px) {
				padding-bottom: 2rem;
				padding-top: 2rem;
				padding-right: 15px;
			}
		}
	}
}

.offer {
	padding-top: 3rem;
	padding-bottom: 3rem;
	@media screen and (max-width: 767px) {
		padding-bottom: 1rem;
		padding-top: 2rem;
	}
	.col-offer {
		.offer-inner {
			padding: 2rem 1rem;
			@media screen and (max-width: 767px) {
				padding: 1rem 0;
			}
			&__ico {
				position: absolute;
				left:0;
				top:0;
				color: $color-accent;
			}
			&__header {
				position: relative;
				padding-left: 2.5rem;
				@media screen and (max-width: 767px) {
					margin-bottom: 0.5rem;
				}
			}
		}
	}
}
/* ... */

